Package JSON DomoMaker D Updates

--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zab3355/DomoMaker-B"
+    "url": "git+https://github.com/zab3355/DomoMaker-D"
   },
   "bugs": {
-    "url": "https://github.com/zab3355/DomoMaker-B"
+    "url": "https://github.com/zab3355/DomoMaker-D"
   },
-  "homepage": "https://github.com/zab3355/DomoMaker-B#readme"
+  "homepage": "https://github.com/zab3355/DomoMaker-D#readme"
 }
