--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.9.4",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.4.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
