--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-react": "^7.9.4",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.4.1",
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
