--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "gulp": "^4.0.2",
     "helmet": "^3.21.2",
     "mongoose": "^5.9.1",
     "redis": "^3.0.2",
