--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "scripts": {
    "buildLoginBundle": "babel ./client/login ./client/helper --presets react --out-file ./hosted/loginBundle.js",
     "buildAppBundle": "babel ./client/app ./client/helper --presets react --out-file ./hosted/bundle.js",
-    "buildRemoveBundle": "babel ./client/remover ./client/helper --presets react --out-file ./hosted/removeBundle.js",
-    "buildSearchBundle": "babel ./client/search ./client/helper --presets react --out-file ./hosted/searchBundle.js",
-    "buildSettingsBundle": "babel ./client/settings ./client/helper --presets react --out-file ./hosted/settingsBundle.js",
-    "build": "npm run buildLoginBundle && npm run buildAppBundle && npm run buildRemoveBundle && npm run buildSettingBundle",
+    "buildRemoveBundle": "babel ./client/app ./client/helper --presets react --out-file ./hosted/removeBundle.js",
+    "buildSettingsBundle": "babel ./client/app ./client/helper --presets react --out-file ./hosted/settingsBundle.js",
+    "buildSearchBundle": "babel ./client/app ./client/helper --presets react --out-file ./hosted/searchBundle.js", 
+    "build": "npm run buildLoginBundle && npm run buildAppBundle && npm run buildRemoveBundle && npm run buildSettingsBundle && npm run buildSearchBundle",
     "watchLoginBundle": "babel --watch ./client/login ./client/helper --presets react --out-file ./hosted/loginBundle.js",
     "watchAppBundle": "babel --watch ./client/app ./client/helper --presets react --out-file ./hosted/bundle.js",
     "nodemon": "nodemon --watch ./server ./server/app.js",
