--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "description": "A Simple Login Example using Node.js, Mongo and Redis",
   "main": "./server/app.js",
   "scripts": {
-   "buildLoginBundle": "babel ./client/login ./client/helper --presets react --out-file ./hosted/loginBundle.js",
-    "buildAppBundle": "babel ./client/app ./client/helper --presets react --out-file ./hosted/bundle.js",
-    "build": "npm run buildLoginBundle && npm run buildAppBundle",
-    "watchLoginBundle": "babel --watch ./client/login ./client/helper --presets react --out-file ./hosted/loginBundle.js",
-    "watchAppBundle": "babel --watch ./client/app ./client/helper --presets react --out-file ./hosted/bundle.js",
+   "buildLoginBundle": "babel ./client/login/client.js ./client/helper/helper.js --presets react --out-file ./hosted/loginBundle.js",
+    "buildAppBundle": "babel ./client/app/maker.js ./client/helper/helper.js --presets react --out-file ./hosted/bundle.js",
+    "buildSettingsBundle": "babel ./client/app/maker.js ./client/helper/helper.js --presets react --out-file ./hosted/settingsBundle.js",
+    "build": "npm run buildLoginBundle && npm run buildAppBundle && npm run buildSettingsBundle",
+    "watchLoginBundle": "babel --watch ./client/login/client.js ./client/helper/helper.js --presets react --out-file ./hosted/loginBundle.js",
+    "watchAppBundle": "babel --watch ./client/app/maker.js ./client/helper/helper.js --presets react --out-file ./hosted/bundle.js",
     "nodemon": "nodemon --watch ./server ./server/app.js",
     "start": "node ./server/app.js",
     "pretest": "eslint ./server --fix",
@@ -25,7 +26,7 @@
     "Login"
   ],
   "author": "Cody Van De Mark",
-  "license": "UNLICENSED",
+  "license": "Apache 2.0",
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
