--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "Login"
   ],
   "author": "Cody Van De Mark",
-  "license": "Apache 2.0",
+  "license": "UNLICENSED",
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
