--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "npm run buildLoginBundle && npm run buildAppBundle && npm run buildSettingsBundle",
     "watchLoginBundle": "babel --watch ./client/login ./client/helper --presets @babel/preset-react --out-file ./hosted/loginBundle.js",
     "watchAppBundle": "babel --watch ./client/app ./client/helper --presets @babel/preset-react --out-file ./hosted/bundle.js",
+    "watchSettingsBundle": "babel --watch ./client/app ./client/helper --presets @babel/preset-react --out-file ./hosted/setingsBundle.js",
     "nodemon": "nodemon --watch ./server ./server/app.js",
     "start": "node ./server/app.js",
     "pretest": "eslint ./server --fix",
