--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "buildAppBundle": "babel ./client/app ./client/helper --presets @babel/preset-react --out-file ./hosted/bundle.js",
     "buildSettingsBundle": "babel ./client/app ./client/helper --presets @babel/preset-react --out-file ./hosted/settingsBundle.js",
     "buildSearchBundle": "babel ./client/app ./client/helper --presets @babel/preset-react --out-file ./hosted/searchBundle.js",
-    "build": "npm run buildLoginBundle && npm run buildAppBundle && npm run buildSettingsBundle",
+    "build": "npm run buildLoginBundle && npm run buildAppBundle && npm run buildSettingsBundle && npm run buildSearchBundle",
     "watchLoginBundle": "babel --watch ./client/login ./client/helper --presets @babel/preset-react --out-file ./hosted/loginBundle.js",
     "watchAppBundle": "babel --watch ./client/app ./client/helper --presets @babel/preset-react --out-file ./hosted/bundle.js",
-    "watchSettingsBundle": "babel --watch ./client/settings ./client/helper --presets @babel/preset-react --out-file ./hosted/settingsBundle.js",
-    "watchSearchBundle": "babel --watch ./client/search ./client/helper --presets @babel/preset-react --out-file ./hosted/searchBundle.js",
+    "watchSettingsBundle": "babel --watch ./client/app ./client/helper --presets @babel/preset-react --out-file ./hosted/settingsBundle.js",
+    "watchSearchBundle": "babel --watch ./client/app ./client/helper --presets @babel/preset-react --out-file ./hosted/searchBundle.js",
     "nodemon": "nodemon --watch ./server ./server/app.js",
     "start": "node ./server/app.js",
     "pretest": "eslint ./server --fix",
